--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
   },
   "dependencies": {
     "gatsby": "^3.0.0",
+    "gatsby-plugin-contentful-optional-fields": "^2.2.0",
+    "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-prismjs": "^4.0.0",
+    "gatsby-remark-videos-new": "file:./plugins/gatsby-remark-videos-new",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "prismjs": "^1.23.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
