--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bulma": "^0.9.2",
     "gatsby": "^3.0.0",
-    "gatsby-plugin-contentful-optional-fields": "^2.2.0",
     "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
@@ -29,9 +29,13 @@
     "prismjs": "^1.23.0",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.38",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "prettier": "2.2.1"
   },
   "repository": {
