--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@types/react-helmet": "^6.1.0",
     "bulma": "^0.9.2",
     "gatsby": "^3.0.0",
     "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
@@ -30,6 +32,7 @@
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
