--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "gatsby": "^3.0.0",
     "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
