--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "extract": "yarn run babel --config-file ./babel-extract.config.js -o tmp/chunk.js 'src/**/*.{js,jsx,ts,tsx}' && rm -rf tmp"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/react-helmet": "^6.1.0",
+    "babel-preset-gatsby": "^1.1.0",
     "bulma": "^0.9.2",
     "gatsby": "^3.0.0",
     "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
@@ -22,6 +27,8 @@
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-react-i18next": "^1.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
@@ -30,17 +37,23 @@
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "i18next": "^19.8.4",
+    "mobx": "^6.1.8",
     "prismjs": "^1.23.0",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.8.5",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/plugin-transform-typescript": "^7.13.0",
     "@types/ramda": "^0.27.38",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "babel-plugin-i18next-extract": "^0.8.2",
     "prettier": "2.2.1"
   },
   "repository": {
