--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "extract": "yarn run babel --config-file ./babel-extract.config.js -o tmp/chunk.js 'src/**/*.{js,jsx,ts,tsx}' && rm -rf tmp"
+    "extract": "yarn run babel --config-file ./babel-extract.config.js -o tmp/chunk.js 'src/**/*.{js,jsx,ts,tsx}' && rm -rf tmp",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -22,7 +23,7 @@
     "babel-preset-gatsby": "^1.1.0",
     "bulma": "^0.9.2",
     "gatsby": "^3.0.0",
-    "gatsby-plugin-ffmpeg-new": "file:./plugins/gatsby-plugin-ffmpeg-new",
+    "gatsby-plugin-ffmpeg": "^0.3.1",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
@@ -34,12 +35,13 @@
     "gatsby-remark-copy-linked-files": "^3.0.0",
     "gatsby-remark-images": "^4.0.0",
     "gatsby-remark-prismjs": "^4.0.0",
-    "gatsby-remark-videos-new": "file:./plugins/gatsby-remark-videos-new",
+    "gatsby-remark-videos": "^0.3.5",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "i18next": "^19.8.4",
     "mobx": "^6.1.8",
+    "patch-package": "^6.4.7",
     "prismjs": "^1.23.0",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
