--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@octokit/webhooks": "^8.8.0",
     "@types/react-helmet": "^6.1.0",
     "babel-preset-gatsby": "^1.1.0",
     "bulma": "^0.9.2",
