--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-helmet": "^6.1.0",
     "babel-preset-gatsby": "^1.1.0",
     "bulma": "^0.9.2",
+    "dotenv": "^8.2.0",
     "gatsby": "^3.0.0",
     "gatsby-plugin-ffmpeg": "^0.3.1",
     "gatsby-plugin-image": "^1.0.0",
