--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@octokit/webhooks": "^8.8.0",
     "@types/react-helmet": "^6.1.0",
     "babel-preset-gatsby": "^1.1.0",
     "bulma": "^0.9.2",
@@ -42,6 +41,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "i18next": "^19.8.4",
+    "log4js": "^6.3.0",
     "mobx": "^6.1.8",
     "patch-package": "^6.4.7",
     "prismjs": "^1.23.0",
