--- a/package.json
+++ b/package.json
@@ -13,34 +13,35 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "extract": "yarn run babel --config-file ./babel-extract.config.js -o tmp/chunk.js 'src/**/*.{js,jsx,ts,tsx}' && rm -rf tmp",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "webhook": "node webhook.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/react-helmet": "^6.1.0",
-    "babel-preset-gatsby": "^1.1.0",
+    "babel-preset-gatsby": "^1.2.0",
     "bulma": "^0.9.2",
     "dotenv": "^8.2.0",
-    "gatsby": "^3.1.2",
+    "gatsby": "^3.2.0",
     "gatsby-plugin-ffmpeg": "^0.3.1",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-offline": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-image": "^1.2.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-react-i18next": "^1.1.0",
-    "gatsby-plugin-sass": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-remark-copy-linked-files": "^3.0.0",
-    "gatsby-remark-images": "^4.0.0",
-    "gatsby-remark-prismjs": "^4.0.0",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
+    "gatsby-plugin-sitemap": "^3.2.0",
+    "gatsby-remark-copy-linked-files": "^3.2.0",
+    "gatsby-remark-images": "^4.2.0",
+    "gatsby-remark-prismjs": "^4.2.0",
     "gatsby-remark-videos": "^0.3.5",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "i18next": "^19.8.4",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
+    "i18next": "^20.1.0",
     "log4js": "^6.3.0",
     "mobx": "^6.1.8",
     "patch-package": "^6.4.7",
@@ -58,7 +59,7 @@
     "@types/ramda": "^0.27.38",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "babel-plugin-i18next-extract": "^0.8.2",
+    "babel-plugin-i18next-extract": "^0.8.3",
     "prettier": "2.2.1"
   },
   "repository": {
